Sets fixed height on homepage search button
- Button was extending to a too large height on IE8, so this fixes the
height.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1625,7 +1625,7 @@ body { top: 0px !important; }
 
   button.big-btn // search button styles
   {
-    min-height:50px;
+    height:50px;
     min-width:124px;
     font-size:22px;
     @include inline-block();
